[project]
name = "tglens"
version = "0.1.0"
description = "Telegram dump analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "streamlit>=1.49.1",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
