[project]
name = "tglens"
version = "0.1.0"
description = "Telegram dump analyzer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.53.0",
    "wordcloud>=1.9.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
